Add a link to Github.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <p>Hello! My name is Jeremy</p>
 <p>I like coffee, cats, and rain.</p>
+<p>Here's where else I am:</p>
+<ul><li><a href="https://github.com/jeremyboggs/">Github</a></li></ul>
